Kernel#load is a module method, and a respond_to? test on a Wt::Ruby instance 
won't ever be true. So remove the load() special casing. This makes the code
for DeferredWidgets in the wt-homepage and widgetgallery examples work 
correctly.
* Special cased the Wt::WButtonGroup.addButton() method so that it works with
Ext::RadioButtons

2009-01-20 Richard Dale <richard.j.dale@gmail.com>
* Skip methods called 'impl' in the Smoke library generation
* Add a marshaller for std::vector<Wt::WString>

2009-01-19 Richard Dale <richard.j.dale@gmail.com>
* When a WServer method raises a C++ exception, convert it to a Ruby runtime
error calling rb_raise()

2009-01-18 Richard Dale <richard.j.dale@gmail.com>
* Added a Wt::wt_version to return the version string of the Wt lib being used
* Raise the version string of Wt::Ruby to 0.9.0
* The Wt::WServer.setEntryPoint() method that can be passed a Ruby block
like this:

    server.addEntryPoint(Wt::WServer::Application) do |env|
      HelloApplication.new(env, false)
    end

Some more work needs to be done to translate C++ exceptions to Ruby ones for
the WServer methods
* Added the hello-widgetset example
* Added WTHTTP_CONFIGURATION, RUNDIR and WT_CONFIG_XML top level constants
corresponding to the ones in the WConfig.h header
* Don't repeat the code to convert from ARGV to argc/argv and add a utility
function args2argv()
* Added patch from Koen Deforche to fix a looping on startup problem. Thanks
for the patch, but I'm not sure why only certain users are affected.
* Added the treeview example

2009-01-16 Richard Dale <richard.j.dale@gmail.com>
* Removed the simplechat example as it only works with the multi-threaded 
version of libwthttp, which can't be used with Wt::Ruby

2009-01-15 Richard Dale <richard.j.dale@gmail.com>
* Allow Ruby Date and Time instances to be passed to the Wt::WDate and 
Boost::Any constructors
* Remove the optimization in the mark function to only traverse the tree of 