@@ -7,6 +7,8 @@ for DeferredWidgets in the wt-homepage and widgetgallery examples work
 correctly.
 * Special cased the Wt::WButtonGroup.addButton() method so that it works with
 Ext::RadioButtons
+* Added support for JSignal<bool>, JSignal<int> and JSignal<int,int> types.
+The Ext::ComboBox activated signal of type JSignal<int> now works correctly
 
 2009-01-20 Richard Dale <richard.j.dale@gmail.com>
 * Skip methods called 'impl' in the Smoke library generation
